# everything-is-an-actor

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.claude/: launch.json  settings.local.json
.github/workflows/: ci.yml  docs.yml  release.yml
actor_for_agents/: __init__.py  actor.py  interpreter.py  mailbox.py  ref.py  supervision.py  system.py
actor_for_agents/agents/: __init__.py  agent_actor.py  orchestrator.py  run_stream.py  system.py  task.py
actor_for_agents/plugins/: __init__.py  redis.py
benchmarks/: DEPLOYMENT.md  README.md  baseline.json  bench_actor.py  bench_actor_redis.py  bench_agent.py  bench_dispatcher.py  bench_free_monad.py  benchmark_all.py  benchmark_fair_comparison.py  benchmark_root_loop.py  benchmark_root_loop_final.py  benchmark_root_loop_real.py  benchmark_single_root.py  flame_actor.py  monitor.py  profile_actor.py  regression_check.py  run_all_tests.py  stress_test_framework.py  test_agent_layer.py  test_basic_performance.py  test_stress.py  test_system_modes.py
benchmarks/results/: COMPATIBILITY_MATRIX.md
docs/: a2a.md  agents.md  best-practices.md  categorical-analysis.md  composable-future.md  design.md  feishu-intro.md  flow.md  getting-started.md  index.md  lifecycle.md  mailbox.md  moa-on-flow.md  moa.md  rust-runtime-design.md
docs/api/: actor.md  agent-actor.md
everything_is_an_actor/: __init__.py  actor.py  actor_f.py  backend.py  composable_future.py  composable_stream.py  dispatcher.py  frees.py  interpreter.py  mailbox.py  ref.py  supervision.py  system.py  unified_system.py  validation.py  virtual.py
everything_is_an_actor/agents/: __init__.py  agent_actor.py  card.py  run_stream.py  stream_adapter.py  system.py  task.py
everything_is_an_actor/backends/: __init__.py  multi_loop.py  single_loop.py
everything_is_an_actor/core/: __init__.py  actor.py  actor_f.py  backend.py  composable_future.py  composable_stream.py  dispatcher.py  interpreter.py  mailbox.py  ref.py  supervision.py  system.py  types.py  unified_system.py  validation.py  virtual.py
everything_is_an_actor/flow/: __init__.py  combinators.py  flow.py  interpreter.py  quorum.py  serialize.py  system.py  visualize.py
everything_is_an_actor/moa/: __init__.py  builder.py  config.py  layer_output.py  patterns.py  system.py  utils.py
everything_is_an_actor/plugins/: __init__.py  redis.py  retry.py
examples/: basic.py  cross_loop_safety.py  flow_api_demo.py  multi_loop_system.py  orchestration.py  redis_mailbox.py  root_loop_system.py  smart_loop_allocator.py  smart_scheduler.py  supervision.py
flow/: LICENSE
paper2/: README.md  ROADMAP.md  paper.md
paper2/flowbench/: README.md  schema.py
paper2/jit_flow/: README.md  __init__.py  inference_loop.py  parser.py  prompt.py  repair.py
proto/rust-scala-demo/: .gitignore  ARCHITECTURE.md  Makefile
rust_core/: Cargo.toml
rust_core/src/: lib.rs
src/actor_for_agents/: __init__.py  actor.py  mailbox_redis.py  system.py
tests/: test_a2a.py  test_actor.py  test_actor_backpressure.py  test_actor_retry.py  test_adversarial.py  test_composable_future.py  test_composable_future_laws.py  test_composable_future_stress.py  test_composable_stream.py  test_composable_stream_channel.py  test_composable_stream_concurrent.py  test_composable_stream_cross_loop.py  test_composable_stream_laws.py  test_dispatcher.py  test_free_monad.py  test_mailbox_redis.py  test_regression.py  test_root_loop_system.py  test_rust_core.py  test_stop_policy.py  test_stream_adapter.py  test_unified_system_api.py  test_virtual_actor.py
tests/agents/: test_agent_actor.py  test_context_api.py  test_dispatch_stress.py  test_orchestrator.py  test_run_flow.py  test_run_stream.py
tests/flow/: test_adversarial.py  test_boundary.py  test_combinators.py  test_e2e.py  test_flow_adt.py  test_interpreter.py  test_quorum.py  test_serialize.py  test_stream.py  test_stress.py  test_visualize.py
tests/moa/: test_builder.py  (+7 more)
(+32 files in other folders)
