[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "everything-is-an-actor"
version = "0.1.6"
description = "Asyncio-native Actor framework for Python agent systems"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["actor", "asyncio", "agent", "concurrency", "supervision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Framework :: AsyncIO",
]
dependencies = []

[project.optional-dependencies]
redis = ["redis[hiredis]>=7.4.0"]
docs = [
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]
dev = [
    "pytest>=8.0",
    "anyio[asyncio]>=4.0",
    "pytest-anyio>=0.0.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["actor_for_agents"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
