[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "everything-is-an-actor"
version = "0.1.6"
description = "Asyncio-native Actor framework for Python agent systems"
readme = "README.md"
requires-python = ">=3.11"
license = "BUSL-1.1"
keywords = ["actor", "asyncio", "agent", "concurrency", "supervision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Framework :: AsyncIO",
]
dependencies = [
    "anyio[asyncio]>=4",
]

[project.optional-dependencies]
redis = ["redis[hiredis]>=7.4.0"]
langchain = ["langchain-core>=0.3.0"]
docs = [
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]
dev = [
    "pytest>=8.0",
    "pytest-anyio>=0.0.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["everything_is_an_actor"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "F811",  # Redefinition of unused name (type alias pattern)
    "F821",  # Undefined name — lazy imports for ComposableFuture in TYPE_CHECKING blocks
    "E741",  # Ambiguous variable name (I, O) — intentional TypeVar names for Input/Output
]
